# python-for-machine-learning

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
applied_statistics/projects/credit_card_clv_pymc/: README.md  pyproject.toml
applied_statistics/projects/credit_card_clv_pymc/models/: gg_model.nc  gg_model_adj.nc
applied_statistics/projects/credit_card_clv_pymc/notebooks/: clv_modeling.ipynb  rfm_segments.ipynb
applied_statistics/projects/credit_card_clv_pymc/src/: model_utils.py
deep_learning/projects/rcnn_object_detection_video_sagemaker/: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
deep_learning/projects/rcnn_object_detection_video_sagemaker/notebooks/: model_endpoint_setup.ipynb
deep_learning/projects/rcnn_object_detection_video_sagemaker/sample_video/: boxes.json
deep_learning/projects/rcnn_object_detection_video_sagemaker/src/: generate_gif.py  helpers.py  inference.py  model_utils.py
deep_learning/projects/rcnn_object_detection_video_sagemaker/terraform/: backend.hcl-example  iam.tf  main.tf  variables.tf  variables.tfvars-example
deep_learning/projects/tab_transformer_income_sagemaker/: pyproject.toml
deep_learning/projects/tab_transformer_income_sagemaker/docker/: serve.Dockerfile  serve.Dockerfile.dockerignore
deep_learning/projects/tab_transformer_income_sagemaker/notebooks/: tf_keras_hpo.ipynb
deep_learning/projects/tab_transformer_income_sagemaker/scripts/: create_project.sh
deep_learning/projects/tab_transformer_income_sagemaker/src/: model_utils.py  plot_utils.py  preprocess_entry.py  serve  tf_keras_entry.py
deep_learning/projects/tab_transformer_income_sagemaker/src/config/: main.yaml
deep_learning/projects/tab_transformer_income_sagemaker/tests/: test_optuna_objectives.py
supervised_learning/classifiers/projects/batch_transform_sagemaker/: .gitignore  README.md  pyproject.toml
supervised_learning/classifiers/projects/batch_transform_sagemaker/docker/: build_and_push.sh  serve.Dockerfile
supervised_learning/classifiers/projects/batch_transform_sagemaker/docs/: batch_transform.md
supervised_learning/classifiers/projects/batch_transform_sagemaker/notebooks/: batch_transform_demo.ipynb
supervised_learning/classifiers/projects/batch_transform_sagemaker/server/: main.py  start_server.py
time_series/projects/chicago_cta_ridership/: README.md  pyproject.toml
time_series/projects/chicago_cta_ridership/.github/workflows/: fetch_temporary_creds.yml
time_series/projects/chicago_cta_ridership/app/: app.py
time_series/projects/chicago_cta_ridership/app/data/: forecast_results.joblib
time_series/projects/chicago_cta_ridership/docker/: Dockerfile  Dockerfile.dockerignore
time_series/projects/chicago_cta_ridership/docs/: api.md  aws_credentials.md
time_series/projects/chicago_cta_ridership/notebooks/: downsampling.ipynb  eda.ipynb  long_term_forecast.ipynb  optimization.ipynb  processing.ipynb  short_term_forecast.ipynb
time_series/projects/chicago_cta_ridership/scripts/: build_docker_image.sh  create_conda_env.sh  decrypt_credentials.sh  setup_poetry_project.sh
time_series/projects/chicago_cta_ridership/src/: base_trainer.py  custom_utils.py  eda.py  model_utils.py  opt.py  processing_entry.py
time_series/projects/chicago_cta_ridership/src/config/: main.yaml
time_series/projects/chicago_cta_ridership/src/config/long/: long.yaml
time_series/projects/chicago_cta_ridership/src/long/: long_trainer.py  snaive.py  stl.py  var.py
time_series/projects/chicago_cta_ridership/src/short/: arima.py  ets.py  var.py
time_series/projects/chicago_cta_ridership/tests/: test_custom_utils.py
time_series/projects/gas_product_forecast_sagemaker/: README.md  pyproject.toml
time_series/projects/gas_product_forecast_sagemaker/docker/: build_and_push.sh  preprocess.Dockerfile  preprocess.Dockerfile.dockerignore  serve.Dockerfile  serve.Dockerfile.dockerignore  train.Dockerfile  train.Dockerfile.dockerignore
time_series/projects/gas_product_forecast_sagemaker/iam_policies/: forecast-lambda-policy.json  forecast-sagemaker-policy.json
time_series/projects/gas_product_forecast_sagemaker/notebooks/: eda.ipynb  forecast.ipynb
time_series/projects/gas_product_forecast_sagemaker/scripts/: create_project.sh
time_series/projects/gas_product_forecast_sagemaker/src/: custom_utils.py  lambda_function.py  lambda_manager.py  model_utils.py  preprocess_entry.py  rest_api_manager.py  serve_entry.py  train_entry.py
time_series/projects/gas_product_forecast_sagemaker/src/config/: main.yaml
tree_based/decision_trees/pybind_decision_tree_classifier/: .gitignore  CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml
tree_based/decision_trees/pybind_decision_tree_classifier/src/decision_tree_classifier/: __init__.py  _dtree.pyi
tree_based/projects/credit_card_fraud_detection_sagemaker/: .gitignore  pyproject.toml
tree_based/projects/credit_card_fraud_detection_sagemaker/docker/: build_and_push.sh  train.lgb.Dockerfile  train.lgb.Dockerfile.dockerignore  train.xgb.Dockerfile  train.xgb.Dockerfile.dockerignore
tree_based/projects/credit_card_fraud_detection_sagemaker/notebooks/: eda.ipynb  precomputed_features.ipynb  training.ipynb
tree_based/projects/credit_card_fraud_detection_sagemaker/src/: lightgbm_entry.py  model_utils.py  plot_utils.py  transformers.py  vonmises_pdf.py  xgboost_entry.py
tree_based/projects/credit_card_fraud_detection_sagemaker/src/config/: main.yaml
tree_based/projects/tenant_experience_classification_sagemaker/: .gitignore  README.md  pyproject.toml
tree_based/projects/tenant_experience_classification_sagemaker/docker/: build_and_push.sh  serve.Dockerfile  train.Dockerfile  train.Dockerfile.dockerignore
tree_based/projects/tenant_experience_classification_sagemaker/notebooks/: classification.ipynb  clustering.ipynb
tree_based/projects/tenant_experience_classification_sagemaker/server/: main.py  utils.py
tree_based/projects/tenant_experience_classification_sagemaker/src/: model_utils.py  plot_utils.py  xgboost_entry.py
(+1585 files in other folders)
