[project]
name = "python-for-machine-learning"
description = "Learning and applying machine learning using tools from the Python ecosystem"
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "polars[style]>=1.4.1",
    "fastparquet>=2024.5.0",
    "pyarrow>=17.0.0",
    "numba>=0.60.0",
    "pyspark>=3.5.1",
    "scipy>=1.14.1",
]
requires-python = ">=3.12"
readme = "README.md"

[dependency-groups]
gbm = [
    "xgboost>=2.1.1",
    "lightgbm>=4.5.0",
    "catboost>=1.2.5",
]
visualization = [
    "matplotlib>=3.9.1",
    "plotly>=5.23.0",
    "seaborn>=0.13.2",
]
web = [
    "fastapi>=0.112.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "uvicorn>=0.30.5",
    "pydantic>=2.8.2",
]
ml = [
    "optuna>=3.6.1",
    "scikit-learn>=1.5.1",
    "yellowbrick>=1.5",
    "imbalanced-learn>=0.12.3",
    "kmodes>=0.12.2",
    "hdbscan>=0.8.37",
    "umap-learn>=0.5.6",
    "feature-engine>=1.8.0",
]
sl = [
    "statsmodels>=0.14.2",
    "scikit-survival>=0.23.0",
    "skforecast>=0.13.0",
    "statsforecast>=1.7.6",
]
nlp = [
    "gensim>=4.3.2",
    "spacy>=3.7.5",
    "nltk>=3.8.2",
]
pytorch = [
    "torch>=2.4.0",
    "pytorch-lightning>=2.4.0",
    "torchmetrics>=1.4.1",
    "transformers>=4.44.0",
]
config = [
    "hydra-core>=1.3.2",
    "dvc>=3.56.0",
    "omegaconf>=2.3.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.3",
    "nbformat>=5.10.4",
]
lint-fmt = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]
aws = [
    "boto3>=1.35.62",
    "boto3-stubs[athena,cloudformation,ecr,ecs,lambda,s3,sagemaker,iam,sagemaker-runtime,ses,cloudwatch]>=1.35.68",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = 3.12
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
explicit_package_bases = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
]

[tool.pdm]
distribution = false

