[project]
name = "python-for-machine-learning"
version = "0.1.0"
description = "Learning and applying machine learning using tools from the Python ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.68",
    "boto3-stubs[application-autoscaling,athena,autoscaling,cloudformation,cloudwatch,ec2,ecr,ecs,iam,lambda,rds,redshift,s3,sagemaker,sagemaker-runtime,secretsmanager,ses,sns]>=1.35.68",
    "catboost>=1.2.5",
    "dvc>=3.56.0",
    "fastparquet>=2024.11.0",
    "feature-engine>=1.8.2",
    "gensim>=4.3.2",
    "hdbscan>=0.8.40",
    "hydra-core>=1.3.2",
    "imblearn>=0.0",
    "keras>=3.6.0",
    "kmodes>=0.12.2",
    "kneed>=0.8.5",
    "lightgbm>=4.5.0",
    "mapie>=0.9.1",
    "matplotlib>=3.9.2",
    "mlflow>=2.18.0",
    "nltk>=3.9.1",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "optuna>=4.1.0",
    "pandas[performance]>=2.2.3",
    "plotly>=5.24.1",
    "plotnine>=0.14.2",
    "polars[style]>=1.14.0",
    "pyarrow>=18.0.0",
    "pyspark>=3.5.3",
    "pytorch-lightning>=2.4.0",
    "s3fs>=0.4.2",
    "sagemaker>=2.75.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "skforecast>=0.14.0",
    "spacy>=3.8.2",
    "statsforecast>=1.7.8",
    "statsmodels>=0.14.4",
    "tensorflow>=2.18.0",
    "tensorflow-io>=0.37.1",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "umap-learn>=0.5.7",
    "xgboost>=2.1.2",
    "yellowbrick>=1.5",
]

[tool.uv]
package = false

[dependency-groups]
lint-fmt = [
    "mypy>=1.13.0",
    "pre-commit>=4.2.0",
    "ruff>=0.8.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
]
web = [
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.1",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.mypy]
python_version = 3.12
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
explicit_package_bases = true
disable_error_code = [
    "import-untyped",
    "import-not-found",
]
