[project]
name = "income-classification"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "polars (==0.18.15)",
    "tensorflow (==2.13.0)",
    "tensorflow-io (==0.32.0)",
    "hydra-core (==1.3.2)",
    "boto3 (==1.26.131)",
    "optuna (==3.1.0)",
    "s3fs (==2023.6.0)",
    "pymysql (==1.1.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
test = [
    "pytest (==7.4.2)"
]
notebook = [
    "scikit-learn (==1.3.1)",
    "ipykernel (==6.25.2)",
    "ipython (==8.15.0)",
    "kaleido (==0.2.1)",
    "matplotlib (==3.8.0)"
]
