[project]
name = "forecast-project"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "pandas[performance] (==1.5.3)",
    "hydra-core (==1.3.2)",
    "boto3 (==1.26.131)",
    "pmdarima (==2.0.4)",
    "sktime (==0.24.0)",
    "statsmodels (==0.14.0)",
    "statsforecast (==1.4.0)",
    "xlrd (==2.0.1)",
    "fastapi (==0.104.1)",
    "joblib (==1.3.2)",
    "uvicorn (==0.24.0.post1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
test = [
    "pytest (==7.4.2)"
]
notebook = [
    "ipykernel (==6.25.2)",
    "ipython (==8.15.0)",
    "kaleido (==0.2.1)",
    "matplotlib (==3.8.0)"
]
