[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.86",
    "boto3-stubs[s3,sagemaker,secretsmanager]>=1.35.86",
    "hydra-core>=1.3.2",
    "lightgbm>=4.5.0",
    "optuna>=4.1.0",
    "pandas>=2.2.3",
    "polars>=1.17.1",
    "pyarrow>=18.1.0",
    "pymysql>=1.1.1",
    "s3fs>=0.4.2",
    "sagemaker>=2.237.1",
    "scikit-learn==1.5.2",
    "xgboost>=2.1.3",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
]
lint-fmt = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]
viz = [
    "matplotlib>=3.9.3",
    "missingno>=0.5.2",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
]
stats = [
    "bnlearn>=0.10.2",
    "statsmodels>=0.14.4",
]

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
disable_error_code = [
    "import-untyped",
]

[[tool.mypy.overrides]]
module = [
    "date_transformer.*",
    "model_utils.*",
    "plot_utils.*",
]
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
