[project]
name = "tenant-experience"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3-stubs[s3,sagemaker]>=1.35.60",
    "boto3>=1.35.57",
    "hydra-core>=1.3.2",
    "optuna>=4.0.0",
    "polars>=1.12.0",
    "pymysql>=1.1.1",
    "s3fs>=0.4.2",
    "sagemaker-training>=4.8.1",
    "sagemaker>=2.233.0",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.2",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "ipywidgets>=8.1.5",
]
lint-fmt = [
    "black[jupyter]>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]
visualization = [
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
]
server = [
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
]

[tool.isort]
profile = "black"
py_version=312
src_paths = ["src"]
remove_redundant_aliases = true

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = 3.12
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "seaborn.*",
    "pandas.*",
    "joblib.*",
    "optuna.*",
    "xgboost.*",
    "polars.*",
    "matplotlib.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sklearn.metrics.*",
    "sklearn.calibration.*",
    "sklearn.model_selection.*",
    "sklearn.pipeline.*",
    "sklearn.preprocessing.*",
    "sklearn.utils.class_weight.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "model_utils.*"
ignore_missing_imports = true
