[project]
name = "batch-transform-demo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.90",
    "boto3-stubs[s3,sagemaker]>=1.35.91",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "polars>=1.18.0",
    "s3fs>=0.4.2",
    "sagemaker>=2.237.1",
    "scikit-learn>=1.5.2",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
]

[dependency-groups]
lint-fmt = [
    "mypy>=1.14.1",
    "ruff>=0.8.5",
]
notebook = [
    "ipykernel>=6.29.5",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "I",
    "F401",
]

[tool.mypy]
python_version = 3.11
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "joblib.*",
    "polars.*",
]
ignore_missing_imports = true
